Adds cookies to save preferences on homepage
Conflicts:
	Gemfile
	Gemfile.lock

--- a/app/assets/stylesheets/pages/commits.css.scss
+++ b/app/assets/stylesheets/pages/commits.css.scss
@@ -8,6 +8,9 @@ body.commits {
     margin-left: 30px;
     line-height: 10px;
     margin-top: 0px;
+    span.separator {
+      color: $input-red;
+    }
   }
 
   .filter-bar {
