--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -1,3 +1,5 @@
+- content_for :shuttle_title do
+  = "#{@user.name} - Shuttle"
 - content_for :file_name do
   = 'views/users/show'
 - content_for :class do
