--- a/app/views/projects/new.slim
+++ b/app/views/projects/new.slim
@@ -11,7 +11,8 @@
 /    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 /    See the License for the specific language governing permissions and
 /    limitations under the License.
-
+- content_for :shuttle_title do
+  = "New Project - Shuttle"
 - content_for :file_name do
   = 'views/projects/new'
 - content_for :class do
