--- a/app/views/home/_modal_add_translation.slim
+++ b/app/views/home/_modal_add_translation.slim
@@ -3,7 +3,8 @@
     .modal.twelve.columns#add-translation
       a.close ×
       - projects = Project.order('LOWER(name) ASC')
-      = form_for(Commit.new, url: project_commits_path(projects.first, format: 'json')) do |f|
+      - cur_project = cookies[:home_new_commit_project] ? cookies[:home_new_commit_project] : project.first
+      = form_for(Commit.new, url: project_commits_path(cur_project, format: 'json')) do |f|
         h2 Translation Request
         .modal-body
           .half
