--- a/app/views/search/commits.js.coffee.erb
+++ b/app/views/search/commits.js.coffee.erb
@@ -13,6 +13,8 @@
 #    limitations under the License.
 
 $(window).ready ->
+  firstTime = true
+
   $("#expand-search").click () ->
     if $(".collapse").data("toggle")
       $("#expand-search").removeClass("active")
@@ -57,6 +59,18 @@ $(window).ready ->
 
   commitSearchForm = $('#commit-search-form')
   commitTable = $('#commits')
+  prefillForm = ->
+    commitSearchForm.find('[name]')
+      .not('meta')
+      .not('[type=hidden]')
+      .not('[type=submit]').each (i, elt) ->
+        prefillVal = $.url().param( $(elt).attr('name') )
+        if $(elt).is('select') and !prefillVal
+          $(elt).prop('selectedIndex', 0)
+        else
+          $(elt).val(prefillVal)
+  prefillForm()
+
   formatTable(commitTable)
   makeCommitURL = -> "#{commitTable.data('url')}?#{commitSearchForm.serialize()}"
   
@@ -67,16 +81,25 @@ $(window).ready ->
         do (commit) -> addCommit(commitTable, commit)
     dataSourceOptions: {type: 'GET'}
 
-  commitSearchForm.submit ->
-    commitScroll.reset()
+  submitSearch = ->
     $.ajax commitTable.data('url'),
       data: commitSearchForm.serialize()
       success: (commits) ->
+        commitScroll.reset()
         formatTable(commitTable)
         commitScroll.loadNextPage()
       error: =>
         new Flash('alert').text("Couldn't load search results");
+
+  commitSearchForm.submit ->
+    window.history.pushState("params", "", "?#{commitSearchForm.serialize()}")
+    submitSearch()
     false
 
+  window.onpopstate = ->
+    unless firstTime
+      prefillForm()
+      submitSearch()
+    firstTime = false
 
 
