Replace SidekiqWorkerTracking with Sidekiq Pro batches feature
* Workers relating to importing a commit are now all grouped under the same
  batch.
* Because Sidekiq batches does not support nesting, we cannot have BlobImporters
  batch up KeyCreators, and CommitImporters batch up BlobImporters. Therefore,
  all three of these job types are under one batch. When that batch finishes,
  the Commit is marked as not loading _and_ all its blobs are marked as not
  loading.
  * To facilitate this, a new association has been introduced, `blobs_commits`,
    that associates a Commit with its Blobs.
* Operations relating to counting and listing workers have been altered to use
  `Sidekiq::Batch::Stats`.
* The ability to clear workers has been removed. This doesn't seem to exist
  in Sidekiq Pro.

--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -21,10 +21,14 @@
       = "#{@commit.revision[0, 6]}"
       span.separator &nbsp;/&nbsp;
       - if @commit.loading?
-        - current_status = "Loading with #{pluralize(@commit.list_workers.count, 'Job')}"
+        - if @commit.import_batch_status
+          | Currently Loading With #{pluralize_with_delimiter @commit.import_batch_status.pending, 'Job'} Remaining
+        - else
+          | Loading Stalled!
+      - elsif @commit.ready?
+        | Currently Ready
       - else
-        - current_status = (@commit.ready? ? 'Ready' : 'Translating')
-      = "Currently #{current_status}"
+        | Currently Translating
       span.separator &nbsp;/&nbsp;
       - if @commit.completed_at
         = "First Completed #{time_ago_in_words(@commit.completed_at)} ago"
@@ -85,12 +89,6 @@ hr.divider
           | Use this if you need to manually reimport a commit
         .controls
           = button_to 'Reimport', redo_project_commit_path(@project, @commit)
-      - if current_user.admin? and @commit.loading?
-        .control-group
-          label.description-label
-            | Use this to clear workers for hanging commits
-          .controls
-            = button_to 'Clear Workers', clear_project_commit_url(@project, @commit)
 
       .control-group
         label.description-label
