--- a/app/assets/templates/translationworkbench/translation_item.mustache
+++ b/app/assets/templates/translationworkbench/translation_item.mustache
@@ -73,6 +73,9 @@
               </div>
             {{/approved}}
           {{/reviewer}}
+
+          <div class="item fuzzy-matches">
+          </div>
         </dl>
 
       </div>
