added a jquery extension for 'diff'ing the fuzzy matches with the originals

--- a/app/assets/stylesheets/partials/_translation_workbench.scss
+++ b/app/assets/stylesheets/partials/_translation_workbench.scss
@@ -127,6 +127,15 @@
               dd + dd {
                 margin-top: 5px;
               }
+              .diff {color:$gray3;}
+              ins {
+                background-color: $background-green;
+                text-decoration: none;
+              }
+
+              del {
+                background-color: $background-red;
+              }
             }
 
 
