Adds download button

--- a/app/assets/stylesheets/pages/commits.css.scss
+++ b/app/assets/stylesheets/pages/commits.css.scss
@@ -90,7 +90,7 @@ body.commits {
       margin-left: 400px;
     }
 
-    input[type="submit"] {
+    input[type="submit"], button {
       float: none;
       width: 170px;
     }
