--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -13,7 +13,10 @@
   - if current_user.monitor?
     .pull-right
       button.default.square href='#settings' rel='modal': i.fa.fa-cogs
-      button.danger href=project_commit_url(@project, @commit) data-method='DELETE' data-confirm='Are you sure you want to delete this commit?' Delete
+      - if @format
+        button.primary href=manifest_project_commit_url(@project, @commit, @format) Download
+      - else
+        button.primary.disabled Missing Format
   h1 Commit Status
 
   h6
@@ -97,4 +100,10 @@ hr.divider
           | Use this if all translations are done but commit is still red
         .controls
           = button_to 'Recalculate', recalculate_project_commit_path(@project, @commit)
+
+      .control-group
+        label.description-label
+          | Delete this commit
+        .controls
+          button.danger href=project_commit_url(@project, @commit) data-method='DELETE' data-confirm='Are you sure you want to delete this commit?' Delete
 
