--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -114,6 +114,12 @@ hr.divider
 
       .control-group
         label.description-label
+          | Use this if the Stash build status is not updating
+        .controls
+          = button_to 'Ping Stash', ping_stash_project_commit_path(@project, @commit)
+
+      .control-group
+        label.description-label
           | Delete this commit
         .controls
           button.danger href=project_commit_url(@project, @commit) data-method='DELETE' data-confirm='Are you sure you want to delete this commit?' Delete
