Fixes erroneous placeholder text on password change page

--- a/app/views/devise/passwords/edit.slim
+++ b/app/views/devise/passwords/edit.slim
@@ -34,7 +34,7 @@
           div
             = f.password_field :password, placeholder: "Password", required: true
           div
-            = f.password_field :password_confirmation, placeholder: "E-mail", required: true
+            = f.password_field :password_confirmation, placeholder: "Password", required: true
           div
             = f.submit "Change my password", class: 'submit sign-in'
           div 
