--- a/app/views/translations/edit.js.coffee.erb
+++ b/app/views/translations/edit.js.coffee.erb
@@ -13,32 +13,64 @@
 #    limitations under the License.
 
 $(document).ready ->
-  blankString = $("input[name=blank_string]")
   copy_field = $("#translation_copy")
-  blankString.checked = true  if copy_field.val().match(/^\s*$/)
-  blankString.change ->
-    $("#translation_copy").val ""  if blankString[0].checked
-
-  copy_field.keyup ->
-    blankString[0].checked = copy_field.val().match(/^\s*$/)
-    true
 
   $(".copy-source").click ->
     copy_field.val "<%= escape_javascript @translation.source_copy %>"
     false
 
-  $(".history-entry").click (e) -> 
-    $.each( $(this).find(".change.copy > .change-state"), (i, elt) -> 
+
+#  @highlighter.find('.tool-item.hide').click =>
+#    @highlighter.hide()
+#  @highlighter.find('.tool-item.search').click =>
+#    if window.getSelection().toString().length > 0
+#      window.open "#{@search_url}?query=#{encodeURIComponent(window.getSelection().toString())}",
+#          "_blank", 'toolbar=0,location=0,menubar=0,height=800,width=1280,left=0'
+
+  $(".history-entry").click (e) ->
+    $.each( $(this).find(".change.copy > .change-state"), (i, elt) ->
       if $(this).hasClass("full")
-        $(this).fadeOut( () -> 
+        $(this).fadeOut( () ->
           $(this).text( $(this).data("compact"))
                  .removeClass("full")
                  .fadeIn()
         )
-      else 
-        $(this).fadeOut( () -> 
+      else
+        $(this).fadeOut( () ->
           $(this).text( $(this).data("full") )
                  .addClass("full")
                  .fadeIn()
         )
     )
+
+  source_copy = "<%= escape_javascript @translation.source_copy %>"
+  fuzzy_matches = $('.fuzzy-matches').first()
+  fuzzy_matches.append($('<dd/>').text('Loading fuzzy matches'))
+
+  $.ajax "<%= fuzzy_match_project_key_translation_url(@translation.key.project, @translation.key, @translation, format: 'json') %>",
+    success: (matches) =>
+      fuzzy_matches.empty()
+      if matches.length == 0
+        fuzzy_matches.append($('<dd/>').text('No fuzzy matches found :('))
+      for match in matches
+        do (match) =>
+          match_percentage = $('<span/>').addClass("match-percentage").text("(#{match.match_percentage.toString()[0..4]}%) ")
+          match_element = $('<a/>').append(match_percentage)
+                                   .append($('<span/>').addClass('fuzzy-matched-copy').text(match.copy))
+                                   .append($('<span/>').addClass('changed').text(match.source_copy).hide())
+                                   .append($('<span/>').addClass('original').text(source_copy).hide())
+
+          match_wrapper = $('<dd/>').append(match_element)
+                                    .append($('<div/>').addClass('diff'))
+
+          match_element.click =>
+            copy_field.val match.copy
+
+          match_element.mouseenter ->
+            match_element.prettyTextDiff
+              diffContainer: match_wrapper.find('.diff')
+            match_wrapper.find('.diff').prepend($('<span/>').addClass("match-percentage").text("Source Diff: "))
+          match_element.mouseleave ->
+            match_wrapper.find('.diff').empty()
+
+          fuzzy_matches.append(match_wrapper)
