Adds project to commits show page

--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -28,17 +28,20 @@
           | You must enable at least one cached format to use this feature
       - else
         button.primary.disabled Translating
-  h1 Commit Status
+  h1
+    | #{@commit.project.name}
+    strong &nbsp;>&nbsp;
+    | Commit #{@commit.revision[0, 6]}
 
   h6
     strong
-      = "#{@commit.revision[0, 6]}"
-      span.separator &nbsp;/&nbsp;
       - if @commit.loading?
         - current_status = "Loading with #{pluralize(@commit.list_workers.count, 'Job')}"
       - else
         - current_status = (@commit.ready? ? 'Ready' : 'Translating')
       = "Currently #{current_status}"
+      span.separator &nbsp;/&nbsp;
+      = "Found #{@commit.keys.count} Keys"
       span.separator &nbsp;/&nbsp;
       - if @commit.completed_at
         = "First Completed #{time_ago_in_words(@commit.completed_at)} ago"
@@ -46,8 +49,6 @@
         = "First Loaded #{time_ago_in_words(@commit.loaded_at)} ago"
       - else
         = "First Created #{time_ago_in_words(@commit.created_at)} ago"
-      span.separator &nbsp;/&nbsp;
-      = "Found #{@commit.keys.count} Keys"
 
 hr.divider
 
