--- a/app/views/translations/edit.js.coffee.erb
+++ b/app/views/translations/edit.js.coffee.erb
@@ -13,19 +13,62 @@
 #    limitations under the License.
 
 $(document).ready ->
+
+  find_fuzzy_matches = (source_copy, locale) ->
+    fuzzy_matches = $('.fuzzy-matches').first()
+    fuzzy_matches.empty()
+    fuzzy_matches.append($('<dd/>').text('Loading fuzzy matches'))
+    $.ajax "<%= search_fuzzy_matches_path(format: 'json') %>",
+      data:
+        source_copy: source_copy
+        locale: target_locale
+      success: (matches) =>
+        fuzzy_matches.empty()
+        if matches.length == 0
+          fuzzy_matches.append($('<dd/>').text('No fuzzy matches found :('))
+        for match in matches
+          do (match) =>
+            match_percentage = $('<span/>').addClass("match-percentage").text("(#{match.match_percentage.toString()[0..4]}%) ")
+            match_element = $('<a/>').append(match_percentage)
+                                     .append($('<span/>').addClass('fuzzy-matched-copy').text(match.copy))
+                                     .append($('<span/>').addClass('changed').text(match.source_copy).hide())
+                                     .append($('<span/>').addClass('original').text(source_copy).hide())
+
+            match_wrapper = $('<dd/>').append(match_element)
+                                      .append($('<div/>').addClass('diff'))
+
+            match_element.click =>
+              copy_field.val match.copy
+
+            match_element.mouseenter ->
+              match_element.prettyTextDiff
+                diffContainer: match_wrapper.find('.diff')
+              match_wrapper.find('.diff').prepend($('<span/>').addClass("match-percentage").text("Source Diff: "))
+            match_element.mouseleave ->
+              match_wrapper.find('.diff').empty()
+
+            fuzzy_matches.append(match_wrapper)
+
+  source_copy = "<%= escape_javascript @translation.source_copy %>"
+  target_locale = "<%= escape_javascript @translation.rfc5646_locale %>"
+
+  current_selection = source_copy
+
   copy_field = $("#translation_copy")
+  source_copy_field = $("#source_copy")
 
   $(".copy-source").click ->
     copy_field.val "<%= escape_javascript @translation.source_copy %>"
     false
 
+  source_copy_field.click ->
+    selection_string = window.getSelection().toString()
 
-#  @highlighter.find('.tool-item.hide').click =>
-#    @highlighter.hide()
-#  @highlighter.find('.tool-item.search').click =>
-#    if window.getSelection().toString().length > 0
-#      window.open "#{@search_url}?query=#{encodeURIComponent(window.getSelection().toString())}",
-#          "_blank", 'toolbar=0,location=0,menubar=0,height=800,width=1280,left=0'
+    if selection_string.length > 0 and selection_string != current_selection
+      current_selection = selection_string
+      source_copy_field.removeHighlight()
+      source_copy_field.highlight(current_selection)
+      find_fuzzy_matches(current_selection, target_locale)
 
   $(".history-entry").click (e) ->
     $.each( $(this).find(".change.copy > .change-state"), (i, elt) ->
@@ -43,34 +86,5 @@ $(document).ready ->
         )
     )
 
-  source_copy = "<%= escape_javascript @translation.source_copy %>"
-  fuzzy_matches = $('.fuzzy-matches').first()
-  fuzzy_matches.append($('<dd/>').text('Loading fuzzy matches'))
+  find_fuzzy_matches(source_copy, target_locale)
 
-  $.ajax "<%= fuzzy_match_project_key_translation_url(@translation.key.project, @translation.key, @translation, format: 'json') %>",
-    success: (matches) =>
-      fuzzy_matches.empty()
-      if matches.length == 0
-        fuzzy_matches.append($('<dd/>').text('No fuzzy matches found :('))
-      for match in matches
-        do (match) =>
-          match_percentage = $('<span/>').addClass("match-percentage").text("(#{match.match_percentage.toString()[0..4]}%) ")
-          match_element = $('<a/>').append(match_percentage)
-                                   .append($('<span/>').addClass('fuzzy-matched-copy').text(match.copy))
-                                   .append($('<span/>').addClass('changed').text(match.source_copy).hide())
-                                   .append($('<span/>').addClass('original').text(source_copy).hide())
-
-          match_wrapper = $('<dd/>').append(match_element)
-                                    .append($('<div/>').addClass('diff'))
-
-          match_element.click =>
-            copy_field.val match.copy
-
-          match_element.mouseenter ->
-            match_element.prettyTextDiff
-              diffContainer: match_wrapper.find('.diff')
-            match_wrapper.find('.diff').prepend($('<span/>').addClass("match-percentage").text("Source Diff: "))
-          match_element.mouseleave ->
-            match_wrapper.find('.diff').empty()
-
-          fuzzy_matches.append(match_wrapper)
