Suggestions in footer

--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -32,6 +32,10 @@ footer {
     margin-top: 20px;
     a {
       color: #555555;
+      text-decoration: underline;
+    }
+    i {
+      color: darkred;
     }
   }
 
