--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -14,8 +14,10 @@
 
 footer
   p
-    | open source project by 
-    a href="https://squareup.com" 
-      | Square, Inc.
+    | we
+    | &nbsp;
+    i.fa.fa-heart
+    | &nbsp;suggestions! &nbsp;&nbsp; submit them&nbsp;
+    a href="https://jira.corp.squareup.com/secure/CreateIssueDetails!init.jspa?pid=12827&issuetype=6" here
   p 
     = image_tag "footer.png"
