Adds flip switch for blacklist/whitelist for project

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,13 +39,14 @@
 @import "partials/alerts";
 @import "partials/chosen";
 @import "partials/datepicker";
+@import "partials/flipswitch";
 @import "partials/footer";
 @import "partials/infinite_scroll";
 @import "partials/locale_field";
 @import "partials/multi_field";
 @import "partials/modal";
 @import "partials/navbar";
+@import "partials/tooltip";
 @import "partials/translation_workbench";
 @import "partials/worker_status";
-@import "partials/tooltip";
 @import "partials/highlighter";
