--- a/app/assets/stylesheets/pages/projects.css.scss
+++ b/app/assets/stylesheets/pages/projects.css.scss
@@ -113,3 +113,18 @@ body.projects {
   }
 
 }
+
+#projects-edit {
+  .flipswitch-inner:before {
+    content: "BLACKLIST";
+    padding-left: 8px;
+    background-color: #666666; color: #FFFFFF;
+  }
+
+  .flipswitch-inner:after {
+    content: "WHITELIST";
+    padding-right: 8px;
+    background-color: #F0F0F0; color: #666666;
+    text-align: right;
+  }
+}
