--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -1,3 +1,4 @@
+@import "css3-mixins";
 @import "base/vars";
 @import "css3-mixins";
 
@@ -19,8 +20,16 @@ form#new_project {
   }
 }
 
+.flipswitch {
+  float: right;
+  margin-bottom: -30px;
+}
+
 fieldset {
   padding: 20px 0px 50px 0px;
+  width: 100%;
+  @include transition(height);
+//  @include transition-duration(250ms);
 }
 
 legend {
